--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   lottie: ^3.3.1
   animated_text_kit: ^4.2.2
   image_picker: ^0.8.7+5
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
