--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.8
   firebase_auth: ^5.3.4
   firebase_core: ^3.9.0
